--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			
 		<div class="logo">
 			<i class="fas fa-cloud"></i>
-			Digital			
+			Digital		
+			<i class="bars fas fa-bars"></i>	
 		</div>
 
 		<nav>
