Edited version started

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title> assignment-5</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<header>
-			
-		<div class="logo">
-			<i class="fas fa-cloud"></i>
-			Digital		
-			<i class="bars fas fa-bars"></i>	
-		</div>
+	<header>
 
-		<nav>
+		<ul class="logo">
+			<li><i class="fas fa-cloud"></i></li>
+			<li>&nbsp;Digital</li>
+		</ul>
+
+		<nav class="desktop">
 			<ul>
 				<li><a href="#"> Home </a></li>
 				<li><a href="#"> About </a></li>
@@ -26,22 +29,42 @@
 			</ul>
 		</nav>
 
-	<section >
-		<article class="content">
-		<h1>Welcome To Digital Marketting Agency</h1>
-		<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br> <br>
-			
-		</p>
-			<a href="#">Read More</a>
-			<a href="#">Watch Video</a>
-		</article>
 
-		<article class="image">
+		<nav class="mobile">
+			<i class="bars fas fa-bars"></i>
+			<ul>
+				<li><a href="#"> Home </a></li>
+				<li><a href="#"> About </a></li>
+				<li><a href="#"> Dropdown </a></li>
+				<li><a href="#"> Term Page </a></li>
+				<li><a href="#"> Contact Page </a></li>
+				<li class="login"><a href="#">Login</a></li>
+			</ul>
+		</nav>
+	</header>
+
+
+
+	<article>
+		<section class="content">
+			<h1>Welcome To Digital Marketing Agency</h1>
+			<p>
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+				industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+				and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+				leap into electronic typesetting, remaining essentially unchanged. <br> <br>
+
+			</p>
+			<a href="#">Read More</a>
+			&nbsp;
+			<a href="#">Watch Video</a>
+		</section>
+
+		<section class="image">
 			<img src="pic.jpeg">
-		</article>
-	</section>
-</header>
+		</section>
+	</article>
 
 </body>
+
 </html>
